Bug 455451 - "% Complete" widget should be horizontal but is tiny and vertical instead
Summary: "% Complete" widget should be horizontal but is tiny and vertical instead
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.04.2
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-17 01:18 UTC by bbame55
Modified: 2022-07-30 22:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.08
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bbame55 2022-06-17 01:18:47 UTC
STEPS TO REPRODUCE
1. Open ktorrent
2. Begin downloading a torrent
3. Look at "% Complete" widget in queue manager

OBSERVED RESULT
Widget is tiny and vertical rather than horizontal

EXPECTED RESULT
Widget should be horizontal

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE neon User - Plasma 5.25
KDE Plasma Version: 5.25
KDE Frameworks Version: 5.95.0
Qt Version: 5.15.4

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2022-07-18 12:56:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/ktorrent/-/merge_requests/62
Comment 2 Gabriel Souza Franco 2022-07-30 22:58:05 UTC
Git commit e24e964aa2b40547d51240c626e98e8a4f38dc22 by Gabriel Souza Franco.
Committed on 18/07/2022 at 12:53.
Pushed by aacid into branch 'release/22.08'.

Explicitly set progress bar to horizontal mode

Breeze and Oxygen default to a vertical progress bar.
Related: bug 455367
FIXED-IN: 22.08

M  +1    -1    ktorrent/view/viewdelegate.cpp

https://invent.kde.org/network/ktorrent/commit/e24e964aa2b40547d51240c626e98e8a4f38dc22