Explicitly set progress bar to horizontal mode

Breeze and Oxygen default to a vertical progress bar.

BUG: 455451
BUG: 455367
FIXED-IN: 22.08